kubernetes/helm/cert-manager/examples/selfsigned-smoke-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-test
